In TextInputClientMac release lock when IPC request is not sent to the renderer

Requests for character index and first rect for range are handled by sending an
IPC to the renderer and using a lock to and condition to wait until the response
comes back. It is however possible to delete the IPC and return early. In such
cases we should release the acquired lock and signal using the condition.

Bug: 791594
Change-Id: I6f6c43189aa6a3e8ae4894d57f596025503e76c4